pizzashop-isitio/networking/pizzashop-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pizzashop-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pizzashop-service
spec:
  hosts:
  - "*"
  gateways:
  - pizzashop-gateway
  http:
  - match:
    - uri:
        prefix: /v1/order
    route:
    - destination:
        host: orderservice
        port:
          number: 5000
  - match:
    - uri:
        prefix: /v1/pizza
    route:
    - destination:
        host: pizzaservice
        port:
          number: 5000
